--- a/index.html
+++ b/index.html
@@ -4,8 +4,74 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projet JS campus</title>
+    <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
+
+    <header class="header">
+
+        <div class=" header_logo">
+            <img src="images/iron.avif" alt=""> 
+            <h4> Stark industrie</h4>
+        </div>
+        <nav class="header_menu">
+            <ul>
+              <li><a href="index.html">Accueil</a></li>
+              <li><a href="pages/gallery.html">Gallery</a></li>
+              <li><a href="pages/jeux.html">Jeux</a></li>
+            </ul>
+        </nav>
+    </header>
     <h1> welcome</h1>
+
+    <hr>
+    
+    <section class="section"> 
+
+        <article class="section_container">
+            <h1>voici le 1er article</h1>
+            <article class="section_container_article">
+                <h2>03 March 2018</h2>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Repellendus non harum facilis iusto nobis, recusandae animi necessitatibus excepturi vel aperiam minima, nihil fuga autem optio ab ullam, quod molestiae culpa?</p>
+            </article>
+        </article>
+
+        <article class="section_container">
+            <h1>voici le 2em article</h1>
+            <article class="section_container_article">
+                <h2>03 March 2018</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus modi sapiente necessitatibus! Quae quaerat sed dolorum dolores, facilis incidunt veniam facere eum id quidem ea in voluptate laborum a est!</p>
+            </article>
+        </article>
+
+        <article class="section_container">
+            <h1>voici le 3eme article</h1>
+            <article class="section_container_article">
+                <h2>03 March 2018</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam eius, vel velit rerum nulla quisquam quo modi laboriosam ipsam vero molestias eaque deleniti, unde asperiores qui sunt voluptas quasi natus.</p>
+            </article>
+        </article>
+        <article class="section_container">
+            <h1>voici le 4eme article</h1>
+            <article class="section_container_article">
+                <h2>03 March 2018</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam eius, vel velit rerum nulla quisquam quo modi laboriosam ipsam vero molestias eaque deleniti, unde asperiores qui sunt voluptas quasi natus.</p>
+            </article>
+        </article>
+    </section>
+
+    <footer class="footer">
+        <p>Star industrie</p>
+        <p> 1440 W Chicago Blvd #1100</p>
+        <p> Tecumseh, MI 49286</p>
+            
+        <p>   (517) 902-7851</p>
+        <p>   info@artonicweb.com</p>
+    </footer>
+
+
+
+
+    <script src="scripts/app.js"></script>
 </body>
 </html>
