mise à jour de l'index.html

--- a/index.html
+++ b/index.html
@@ -60,6 +60,30 @@
         </article>
     </section>
 
+    <form action="" method="post" class="form-example">
+        <div class="form-example">
+          <label for="title">Votre titre </label>
+          <input type="text" name="title" id="title" required>
+        </div>
+        <div class="form-example">
+          <label for="name">Votre nom </label>
+          <input type="text" name="name" id="name" required>
+        </div>
+        <div class="form-example">
+            <label for="content">votre contenu</label>
+            <textarea id="content" name="content"
+                    rows="5" cols="13">
+            indiquez votre contenu
+            </textarea>
+        </div>
+        <div class="form-example">
+          <input type="submit" value="ajouter artcile">
+        </div>
+        
+    </form>
+
+    
+
     <footer class="footer">
         <p>Star industrie</p>
         <p> 1440 W Chicago Blvd #1100</p>
