--- a/pages/gallery.html
+++ b/pages/gallery.html
@@ -4,22 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projet JS campus</title>
+    <link rel="stylesheet" href="../styles/header.css" />
     <link rel="stylesheet" href="../styles/style.css">
 </head>
 <body>
 
-    <header class="header">
-
-        <div class=" header_logo">
-            <img src="../images/iron.avif" alt=""> 
-            <h4> Stark industrie</h4>
-        </div>
-        <nav class="header_menu">
+    <header class="">
+        <nav class="header_menu" id="nav">
+            <div class=" header_logo">
+                <img src="../images/iron.avif" alt=""> 
+                <h4> Stark industrie </h4>
+            </div>
             <ul>
-              <li><a href="../index.html">Accueil</a></li>
+              <li><a href="../index.html">Accueil  </a></li>
               <li><a href="gallery.html">Gallery</a></li>
               <li><a href="jeux.html">Jeux</a></li>
             </ul>
+            <div id="icons"></div>
         </nav>
     </header>
 
@@ -72,6 +73,7 @@
 
 
 
-    <script src="scripts/app.js"></script>
+    
+    <script src="../scripts/burger.js"></script>
 </body>
 </html>
