intégration du pierre feuille ciseaux

--- a/pages/jeux.html
+++ b/pages/jeux.html
@@ -44,6 +44,10 @@
       </div>
     </div>
 
+    <section id="show" class="show">
+      <p>ici le match </p>
+      <h3 class="win lost"> </h3>
+    </section>
     <br /><br />
 
     <section class="jeux_container">
